--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
 
-  <meta name="description"
-    content="React Admin Dashboard Template built with Bootstrap, Redux and React Router by Flatlogic. Over 40 unique pages, hundreds of components and theme support.">
-  <meta name="keywords"
-    content="react admin, react dashboard, react admin template, react theme, react dashboard template, react dashboard template">
-  <meta name="author" content="Flatlogic LLC.">
+  <title>Lafe</title>
+
+  <meta name="description" content="Engineering dashboard made for 'Lafe Engenharia'.">
+  <meta name="keywords" content="engenharia, construtora, lafe">
+  <meta name="author" content="Glaros">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-36759672-9"></script>
@@ -26,8 +26,6 @@
   <!-- Yandex.Metrika counter -->
   <script
     type="text/javascript"> (function (m, e, t, r, i, k, a) { m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }; m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a) })(window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym"); ym(48020168, "init", { id: 48020168, clickmap: true, trackLinks: true, accurateTrackBounce: true, webvisor: true, trackHash: true, ecommerce: "dataLayer" }); </script>
-
-  <title>Light Blue React Template - Admin Template built with React</title>
 </head>
 
 <body>
